(* -*- tuareg -*- *)

let flags = match (Sys.getenv "FLUID_DEBUG") with
(* NOTE(jared): whenever making changes, remove this `-w` arg, which suppresses all warnings *)
| exception Not_found -> " "
| _ -> " -DDEBUG"

let () = Jbuild_plugin.V1.send (Printf.sprintf {|
(library
  (public_name fluid.MacOS)
  (name FluidMac)
  (libraries flex belt FluidMaker Layout Files dynlink)
  (c_names
    fluid
    fluid_components
    fluid_column_browser
    fluid_custom_view
    fluid_window
    fluid_shared
    fluid_hotkeys)
  (install_c_headers fluid_shared)
  (c_library_flags -framework Cocoa -framework Carbon -framework CoreImage)
  (c_flags -x objective-c %s)
  ; (no_dynlink)
  (preprocess (pps belt.ppx)))
|} flags)